[MCR] Fix the submitter vertical alignment

--- a/client/layouts/mountainConditions/MountainConditionsReport.css
+++ b/client/layouts/mountainConditions/MountainConditionsReport.css
@@ -44,6 +44,7 @@
     composes: HeaderComponent;
     composes: Flex;
     margin: 1em 0;
+    line-height: 0;
 
 
     & img {
